--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,5 @@ tracing-appender = "0.2"
 # Utilities
 uuid = { version = "1", features = ["v4"] }
 chrono = "0.4"
+indicatif = "0.18.3"
+serde_json = "1.0.147"
