--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,10 @@ uuid = { version = "1", features = ["v4"] }
 chrono = "0.4"
 indicatif = "0.18.3"
 serde_json = "1.0.147"
+sysinfo = "0.32"
+
+[profile.release]
+lto = true
+codegen-units = 1
+strip = true
+panic = "abort"
